weather API is connected

--- a/src/app/weather-forecast/content/content.component.html
+++ b/src/app/weather-forecast/content/content.component.html
@@ -1,1 +1,11 @@
-<app-header></app-header>
+<div class="bg-color-blue-lightest h-dvh">
+  <div>
+    <app-header></app-header>
+  </div>
+  <div class="flex flex-row">
+    <app-general-list class="w-[50%]"></app-general-list>
+    <app-favorite-list class="w-[50%]"></app-favorite-list>
+  </div>
+</div>
+
+
