--- a/src/app/weather-forecast/content/general-list/city-card/city-card.component.html
+++ b/src/app/weather-forecast/content/general-list/city-card/city-card.component.html
@@ -1,1 +1,4 @@
-<p>city-card works!</p>
+<div class="city_card">
+  <span class="city_card__city">City Name</span>
+  <span class="city_card__temperature">Temp</span>
+</div>
