--- a/src/app/weather-forecast/content/favorite-list/favorite-card/favorite-card.component.scss
+++ b/src/app/weather-forecast/content/favorite-list/favorite-card/favorite-card.component.scss
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .favorite_card {
+    @apply flex flex-col outline-0 cursor-pointer m-0.5 min-h-[172px] text-2xl font-light overflow-hidden rounded;
+  }
+
+  .favorite_card__city {
+    @apply bg-color-light-grey pt-5 pl-5 pr-5 pb-3;
+  }
+
+  .favorite_card__weather {
+    @apply flex flex-row items-center bg-blue-50 pt-4 pr-6 pb-6 pl-5 justify-between;
+  }
+
+  .favorite_card__weather_conditions {
+    @apply flex flex-row
+  }
+
+  .favorite_card_wind {
+    @apply flex flex-row mt-3 items-center text-xl
+  }
+
+}
