--- a/src/app/weather-forecast/content/header/header.component.scss
+++ b/src/app/weather-forecast/content/header/header.component.scss
@@ -8,7 +8,7 @@
   }
 
   .btn {
-    @apply flex flex-row justify-center my-1.5;// m-1.5 mr-5;
+    @apply flex flex-row justify-center my-1.5;
 
     & .img {
       @apply cursor-pointer relative w-10 h-10 p-2.5 border-0 rounded bg-color-label-base hover:bg-color-label-hover transition duration-500 ease-in-out;
