added types to data from weather API

--- a/src/app/weather-forecast/content/general-list/city-card/city-card.component.html
+++ b/src/app/weather-forecast/content/general-list/city-card/city-card.component.html
@@ -1,4 +1,4 @@
 <div class="city_card">
-  <span class="city_card__city">City Name</span>
-  <span class="city_card__temperature">Temp</span>
+  <span class="city_card__city">{{weatherData.location.name}}</span>
+  <span class="city_card__temperature">{{weatherData.current.temp_c}} °C</span>
 </div>
