--- a/src/app/weather-forecast/content/general-list/general-list.component.html
+++ b/src/app/weather-forecast/content/general-list/general-list.component.html
@@ -1,3 +1,3 @@
-<div class="m-0.5">
-  <app-city-card></app-city-card>
+<div class="m-0.5" *ngFor="let city of cities">
+  <app-city-card [weatherData]="city"></app-city-card>
 </div>
