search and adding of cities to a general list. sorting of cities

--- a/src/app/weather-forecast/content/header/header.component.html
+++ b/src/app/weather-forecast/content/header/header.component.html
@@ -18,7 +18,7 @@
 <!--  Search-->
   <div class="wrapper">
     <div class="w-[254px] h-[39px]">
-      <input class="search" type="text" placeholder="Search">
+      <input class="search" type="text" placeholder="Search" [(ngModel)]="cityName" (keyup.enter)="onSearchCity()">
     </div>
   </div>
 
