started with drag and drop development

--- a/src/app/weather-forecast/content/favorite-list/favorite-card/favorite-card.component.html
+++ b/src/app/weather-forecast/content/favorite-list/favorite-card/favorite-card.component.html
@@ -1,4 +1,4 @@
-<div class="favorite_card">
+<div class="favorite_card" cdkDrag>
   <div class="hover favorite_card__city">
     <p>City Name</p>
   </div>
