--- a/src/app/weather-forecast/content/general-list/general-list.component.scss
+++ b/src/app/weather-forecast/content/general-list/general-list.component.scss
@@ -2,8 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
+@layer components {}
 
+//Need to fix animation
+//Start component development of favorite cities
+//Complete drag and drop between components
 
+.cities-list {
+  overflow: hidden;
+}
 
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.city-box:last-child {
+  border: none;
+}
+
+.cities-list.cdk-drop-list-dragging .city-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
