data sharing in progress

--- a/src/app/weather-forecast/content/favorite-list/favorite-list.component.html
+++ b/src/app/weather-forecast/content/favorite-list/favorite-list.component.html
@@ -1,1 +1,5 @@
-<app-favorite-card></app-favorite-card>
+<div cdkDropList (cdkDropListDropped)="drop($event)">
+  @for (city of favoriteCities; track city) {
+    <app-favorite-card cdkDrag [weatherData]="city">{{city}}</app-favorite-card>
+  }
+</div>
