--- a/src/app/weather-forecast/weather-forecast.component.html
+++ b/src/app/weather-forecast/weather-forecast.component.html
@@ -2,7 +2,7 @@
   <div>
     <app-content></app-content>
   </div>
-  <div>
+  <div class="flex-1 w-full h-full overflow-hidden">
     <app-chart></app-chart>
   </div>
 </div>
