--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,6 @@
 
 @layer components {
   body {
-    @apply font-normal text-xl leading-6 text-color-text-main;
+    @apply font-normal text-xl leading-6 text-color-text-main h-full m-0;
   }
 }
